--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="opciones">
             <p>¿No tienes una cuenta? <a href="">Regístrate</a></p>
-            <button class="github-btn"> <a href="vhttps://github.com/eeordonezz/multitasking"> GitHub</a> </button>
+            <button class="github-btn"> <a href="https://github.com/eeordonezz/multitasking"> GitHub</a> </button>
         </div>
     </div>
 
